k8s/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: 'kube-system-https-redirect@kubernetescrd,kube-system-basic-auth@kubernetescrd'
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  name: http
  tls:
    - hosts:
        - longhorn.tryrocket.cloud
      secretName: longhorn-tryrocket-cloud-production-tls
